fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,8 @@
     height: 2rem;
     border-radius: 50%;
 }
+
+body {
+    height: 100vh;
+    overflow-y: hidden;
+}
